--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "wechat-crypto": "0.0.2",
     "wechat-enterprise": "^0.1.1",
     "wechat-oauth": "^1.2.1",
-    "luis_sdk": "latest"
+    "luis_sdk": "latest",
+    "mongodb": "latest"
   },
   "devDependencies": {
     "request-promise": "latest"
